CHATS_SIT/force-app/main/default/objects/T_UPK_INDIV_AUTH_INFO__c.object
<CustomObject>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_child_dually_enrolled_in_UPK__c</fullName>
        <label>Is the child dually enrolled in UPK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00898</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPK_Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UPK Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPK_Stacking_Hours__c</fullName>
        <label>UPK Stacking Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Copied_To_Auth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Copied To Auth</label>
        <type>Checkbox</type>
    </fields>
    <label>UPK Individual Authorization Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>UPK Information ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPK Individual Authorization Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>